mutter crash (SIGSEGV) in is_surface_effectively_synchronized() when closing GStreamer Wayland Demo
Mutter segfaults when closing the GStreamer Wayland Demo (clicking the X in the upper right corner). This is on Fedora 27 but I see a similar crash on Debian Unstable.
This is the program that reproduces the crash: https://cgit.freedesktop.org/gstreamer/gst-plugins-bad/tree/tests/examples/waylandsink
[talbert@deasil ~]$ coredumpctl gdb 1842
PID: 1842 (gnome-shell)
UID: 1000 (talbert)
GID: 1000 (talbert)
Signal: 11 (SEGV)
Timestamp: Thu 2018-04-19 20:30:35 EDT (25min ago)
Command Line: /usr/bin/gnome-shell
Executable: /usr/bin/gnome-shell
Control Group: /user.slice/user-1000.slice/session-2.scope
Unit: session-2.scope
Slice: user-1000.slice
Session: 2
Owner UID: 1000 (talbert)
Boot ID: d149ea1e3c6d410bb1c3f1b0e3cbaf13
Machine ID: c575ef9efdd3466c9dc9418c23831247
Hostname: deasil
Storage: /var/lib/systemd/coredump/core.gnome-shell.1000.d149ea1e3c6d410bb1c3f1b0e3cbaf13.1842.1524184235000000.lz4
Message: Process 1842 (gnome-shell) of user 1000 dumped core.
Stack trace of thread 1842:
#0 0x00007f9c758ddfa1 wl_surface_commit (libmutter-1.so.0)
#1 0x00007f9c71d5ed1e ffi_call_unix64 (libffi.so.6)
#2 0x00007f9c71d5e68f ffi_call (libffi.so.6)
#3 0x00007f9c6ba0ca3b wl_closure_invoke (libwayland-server.so.0)
#4 0x00007f9c6ba0927f wl_client_connection_data (libwayland-server.so.0)
#5 0x00007f9c6ba0ac12 wl_event_loop_dispatch (libwayland-server.so.0)
#6 0x00007f9c758c7947 wayland_event_source_dispatch (libmutter-1.so.0)
#7 0x00007f9c7737ab77 g_main_context_dispatch (libglib-2.0.so.0)
#8 0x00007f9c7737af20 g_main_context_iterate.isra.23 (libglib-2.0.so.0)
#9 0x00007f9c7737b232 g_main_loop_run (libglib-2.0.so.0)
#10 0x00007f9c7589093c meta_run (libmutter-1.so.0)
#11 0x000056472d8a142c main (gnome-shell)
#12 0x00007f9c75238f2a __libc_start_main (libc.so.6)
#13 0x000056472d8a156a _start (gnome-shell)
Stack trace of thread 1859:
#0 0x00007f9c75302c6b __poll (libc.so.6)
#1 0x00007f9c7737ae99 g_main_context_iterate.isra.23 (libglib-2.0.so.0)
#2 0x00007f9c7737afac g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007f9c60f1342d dconf_gdbus_worker_thread (libdconfsettings.so)
#4 0x00007f9c773a2486 g_thread_proxy (libglib-2.0.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1857:
#0 0x00007f9c75302c6b __poll (libc.so.6)
#1 0x00007f9c7737ae99 g_main_context_iterate.isra.23 (libglib-2.0.so.0)
#2 0x00007f9c7737b232 g_main_loop_run (libglib-2.0.so.0)
#3 0x00007f9c77963b56 gdbus_shared_thread_func (libgio-2.0.so.0)
#4 0x00007f9c773a2486 g_thread_proxy (libglib-2.0.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1866:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1972:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1856:
#0 0x00007f9c75302c6b __poll (libc.so.6)
#1 0x00007f9c7737ae99 g_main_context_iterate.isra.23 (libglib-2.0.so.0)
#2 0x00007f9c7737afac g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007f9c7737aff1 glib_worker_main (libglib-2.0.so.0)
#4 0x00007f9c773a2486 g_thread_proxy (libglib-2.0.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1865:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1860:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1968:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1864:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1964:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1973:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1966:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1962:
#0 0x00007f9c75302c6b __poll (libc.so.6)
#1 0x00007f9c2a5636f1 poll_func (libpulse.so.0)
#2 0x00007f9c2a5550b0 pa_mainloop_poll (libpulse.so.0)
#3 0x00007f9c2a555740 pa_mainloop_iterate (libpulse.so.0)
#4 0x00007f9c2a5557d0 pa_mainloop_run (libpulse.so.0)
#5 0x00007f9c2a563639 thread (libpulse.so.0)
#6 0x00007f9c2a302ac8 internal_thread_func (libpulsecommon-11.1.so)
#7 0x00007f9c755d550b start_thread (libpthread.so.0)
#8 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 2713:
#0 0x00007f9c75307b99 syscall (libc.so.6)
#1 0x00007f9c773c062a g_cond_wait_until (libglib-2.0.so.0)
#2 0x00007f9c7734f381 g_async_queue_pop_intern_unlocked (libglib-2.0.so.0)
#3 0x00007f9c7734f93c g_async_queue_timeout_pop (libglib-2.0.so.0)
#4 0x00007f9c773a2f2e g_thread_pool_thread_proxy (libglib-2.0.so.0)
#5 0x00007f9c773a2486 g_thread_proxy (libglib-2.0.so.0)
#6 0x00007f9c755d550b start_thread (libpthread.so.0)
#7 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1970:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1965:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1971:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1869:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1861:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1863:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1963:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1974:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1969:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1967:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c6d871534 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007f9c6d8717a5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007f9c6dc6ac63 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007f9c6dc8c532 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007f9c755d550b start_thread (libpthread.so.0)
#6 0x00007f9c7530d16f __clone (libc.so.6)
Stack trace of thread 1862:
#0 0x00007f9c755db82d pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007f9c473e2f4b util_queue_thread_func (radeonsi_dri.so)
#2 0x00007f9c473e2e67 impl_thrd_routine (radeonsi_dri.so)
#3 0x00007f9c755d550b start_thread (libpthread.so.0)
#4 0x00007f9c7530d16f __clone (libc.so.6)
GNU gdb (GDB) Fedora 8.0.1-36.fc27
Copyright (C) 2017 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law. Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-redhat-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from /usr/bin/gnome-shell...Reading symbols from /usr/lib/debug/usr/bin/gnome-shell-3.26.2-5.fc27.x86_64.debug...done.
done.
[New LWP 1842]
[New LWP 1859]
[New LWP 1857]
[New LWP 1866]
[New LWP 1972]
[New LWP 1856]
[New LWP 1865]
[New LWP 1860]
[New LWP 1968]
[New LWP 1864]
[New LWP 1964]
[New LWP 1973]
[New LWP 1966]
[New LWP 1962]
[New LWP 2713]
[New LWP 1970]
[New LWP 1965]
[New LWP 1971]
[New LWP 1869]
[New LWP 1861]
[New LWP 1863]
[New LWP 1963]
[New LWP 1974]
[New LWP 1969]
[New LWP 1967]
[New LWP 1862]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Missing separate debuginfo for /lib64/libwayland-client.so.0
Try: dnf --enablerepo='*debug*' install /usr/lib/debug/.build-id/f5/9a59fb4d7f6906a097c6ba16de69d92ea31e58.debug
Missing separate debuginfo for /lib64/libwayland-cursor.so.0
Try: dnf --enablerepo='*debug*' install /usr/lib/debug/.build-id/91/1038a17c00e20fc3e80ff893adda6a80e151b3.debug
Core was generated by `/usr/bin/gnome-shell'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0 is_surface_effectively_synchronized (surface=0x0) at wayland/meta-wayland-surface.c:648
648 if (surface->wl_subsurface == NULL)
[Current thread is 1 (Thread 0x7f9c78245ac0 (LWP 1842))]
Missing separate debuginfos, use: dnf debuginfo-install NetworkManager-glib-1.8.6-1.fc27.x86_64 PackageKit-gtk3-module-1.1.9-3.fc27.x86_64 accountsservice-libs-0.6.42-4.fc27.x86_64 at-spi2-atk-2.26.1-1.fc27.x86_64 at-spi2-core-2.26.2-1.fc27.x86_64 atk-2.26.1-1.fc27.x86_64 bzip2-libs-1.0.6-24.fc27.x86_64 cairo-1.15.10-1.fc27.x86_64 cairo-gobject-1.15.10-1.fc27.x86_64 caribou-0.4.21-5.fc27.x86_64 dbus-glib-0.108-4.fc27.x86_64 dbus-libs-1.12.0-1.fc27.x86_64 dconf-0.26.1-1.fc27.x86_64 elfutils-libelf-0.170-10.fc27.x86_64 expat-2.2.5-1.fc27.x86_64 flac-libs-1.3.2-4.fc27.x86_64 fontconfig-2.12.6-4.fc27.x86_64 freetype-2.8-8.fc27.x86_64 gcr-3.20.0-6.fc27.x86_64 gdk-pixbuf2-2.36.11-1.fc27.x86_64 gdm-3.26.2.1-3.fc27.x86_64 geocode-glib-3.25.4.1-1.fc27.x86_64 gjs-1.50.4-2.fc27.x86_64 glib-networking-2.54.1-1.fc27.x86_64 glibc-2.26-27.fc27.x86_64 gmp-6.1.2-6.fc27.x86_64 gnome-bluetooth-libs-3.26.1-1.fc27.x86_64 gnome-desktop3-3.26.2-1.fc27.x86_64 gnutls-3.5.18-2.fc27.x86_64 gobject-introspection-1.54.1-1.fc27.x86_64 graphite2-1.3.10-3.fc27.x86_64 gsm-1.0.17-4.fc27.x86_64 gstreamer1-1.12.4-1.fc27.x86_64 gtk3-3.22.26-2.fc27.x86_64 gvfs-client-1.34.2.1-1.fc27.x86_64 harfbuzz-1.4.8-1.fc27.x86_64 ibus-libs-1.5.17-6.fc27.x86_64 json-glib-1.4.2-1.fc27.x86_64 keyutils-libs-1.5.10-3.fc27.x86_64 krb5-libs-1.15.2-8.fc27.x86_64 libICE-1.0.9-11.fc27.x86_64 libSM-1.2.2-7.fc27.x86_64 libX11-1.6.5-4.fc27.x86_64 libX11-xcb-1.6.5-4.fc27.x86_64 libXau-1.0.8-9.fc27.x86_64 libXcomposite-0.4.4-11.fc27.x86_64 libXcursor-1.1.15-1.fc27.x86_64 libXdamage-1.1.4-11.fc27.x86_64 libXext-1.3.3-7.fc27.x86_64 libXfixes-5.0.3-4.fc27.x86_64 libXi-1.7.9-4.fc27.x86_64 libXinerama-1.1.3-9.fc27.x86_64 libXrandr-1.5.1-4.fc27.x86_64 libXrender-0.9.10-4.fc27.x86_64 libXtst-1.2.3-4.fc27.x86_64 libasyncns-0.8-13.fc27.x86_64 libblkid-2.30.2-3.fc27.x86_64 libcanberra-0.30-15.fc27.x86_64 libcanberra-gtk3-0.30-15.fc27.x86_64 libcap-2.25-7.fc27.x86_64 libcom_err-1.43.5-2.fc27.x86_64 libcroco-0.6.12-3.fc27.x86_64 libcrypt-nss-2.26-27.fc27.x86_64 libdatrie-0.2.9-6.fc27.x86_64 libdrm-2.4.91-1.fc27.x86_64 libedit-3.1-20.20170329cvs.fc27.x86_64 libepoxy-1.4.3-3.fc27.x86_64 libevdev-1.5.7-3.fc27.x86_64 libgcc-7.3.1-5.fc27.x86_64 libgcrypt-1.8.2-1.fc27.x86_64 libgee-0.20.0-3.fc27.x86_64 libglvnd-1.0.0-1.fc27.x86_64 libglvnd-egl-1.0.0-1.fc27.x86_64 libglvnd-glx-1.0.0-1.fc27.x86_64 libgpg-error-1.27-3.fc27.x86_64 libgudev-232-1.fc27.x86_64 libgweather-3.26.2-1.fc27.x86_64 libidn2-2.0.4-4.fc27.x86_64 libinput-1.10.2-4.fc27.x86_64 libmount-2.30.2-3.fc27.x86_64 libnm-gtk-1.8.4-1.fc27.x86_64 libnotify-0.7.7-4.fc27.x86_64 libogg-1.3.2-8.fc27.x86_64 libpng-1.6.31-1.fc27.x86_64 librsvg2-2.40.20-1.fc27.x86_64 libseccomp-2.3.3-1.fc27.x86_64 libsecret-0.18.5-5.fc27.x86_64 libselinux-2.7-3.fc27.x86_64 libsndfile-1.0.28-6.fc27.x86_64 libsoup-2.60.3-1.fc27.x86_64 libstdc++-7.3.1-5.fc27.x86_64 libtasn1-4.13-1.fc27.x86_64 libtdb-1.3.15-2.fc27.x86_64 libthai-0.1.25-4.fc27.x86_64 libtool-ltdl-2.4.6-20.fc27.x86_64 libunistring-0.9.9-1.fc27.x86_64 libuuid-2.30.2-3.fc27.x86_64 libvorbis-1.3.6-1.fc27.x86_64 libwacom-0.28-3.fc27.x86_64 libxcb-1.12-5.fc27.x86_64 libxkbcommon-0.7.1-5.fc27.x86_64 libxkbcommon-x11-0.7.1-5.fc27.x86_64 libxkbfile-1.0.9-6.fc27.x86_64 libxklavier-5.4-9.fc27.x86_64 libxml2-2.9.7-1.fc27.x86_64 libxshmfence-1.2-6.fc27.x86_64 llvm-libs-5.0.1-6.fc27.x86_64 lz4-libs-1.8.0-1.fc27.x86_64 mesa-dri-drivers-17.3.6-1.fc27.x86_64 mesa-libEGL-17.3.6-1.fc27.x86_64 mesa-libgbm-17.3.6-1.fc27.x86_64 mesa-libglapi-17.3.6-1.fc27.x86_64 mesa-libwayland-egl-17.3.6-1.fc27.x86_64 mozjs52-52.7.3-1.fc27.x86_64 mtdev-1.1.5-9.fc27.x86_64 ncurses-libs-6.0-13.20170722.fc27.x86_64 nettle-3.4-1.fc27.x86_64 nspr-4.19.0-1.fc27.x86_64 nss-3.36.0-1.0.fc27.x86_64 nss-softokn-3.36.0-1.0.fc27.x86_64 nss-softokn-freebl-3.36.0-1.0.fc27.x86_64 nss-util-3.36.0-1.0.fc27.x86_64 p11-kit-0.23.10-1.fc27.x86_64 pango-1.40.14-1.fc27.x86_64 pcre-8.42-1.fc27.x86_64 pcre2-10.31-4.fc27.x86_64 pipewire-0.1.6-2.fc27.x86_64 pixman-0.34.0-4.fc27.x86_64 polkit-libs-0.113-15.fc27.x86_64 pulseaudio-libs-11.1-15.fc27.x86_64 pulseaudio-libs-glib2-11.1-15.fc27.x86_64 readline-7.0-7.fc27.x86_64 sqlite-libs-3.20.1-2.fc27.x86_64 startup-notification-0.12-14.fc27.x86_64 systemd-libs-234-10.git5f8984e.fc27.x86_64 tcp_wrappers-libs-7.6-87.fc27.x86_64 telepathy-glib-0.24.1-7.fc27.x86_64 upower-0.99.7-1.fc27.x86_64 xcb-util-0.4.0-8.fc27.x86_64 xz-libs-5.2.3-4.fc27.x86_64 zlib-1.2.11-4.fc27.x86_64
(gdb) bt
#0 0x00007f9c758ddfa1 in is_surface_effectively_synchronized (surface=0x0)
at wayland/meta-wayland-surface.c:648
#1 0x00007f9c758ddfa1 in meta_wayland_surface_commit (surface=<optimized out>)
at wayland/meta-wayland-surface.c:895
#2 0x00007f9c758ddfa1 in wl_surface_commit (client=<optimized out>, resource=<optimized out>)
at wayland/meta-wayland-surface.c:1053
#3 0x00007f9c71d5ed1e in ffi_call_unix64 () at ../src/x86/unix64.S:76
#4 0x00007f9c71d5e68f in ffi_call (cif=cif@entry=0x7ffc806f4530, fn=<optimized out>, rvalue=<optimized out>, rvalue@entry=0x0, avalue=avalue@entry=0x7ffc806f4600) at ../src/x86/ffi64.c:525
#5 0x00007f9c6ba0ca3b in wl_closure_invoke (closure=closure@entry=0x5647308a3bc0, flags=flags@entry=2, target=<optimized out>, target@entry=0x5647308c6850, opcode=opcode@entry=6, data=<optimized out>,
data@entry=0x564730844000) at src/connection.c:935
#6 0x00007f9c6ba0927f in wl_client_connection_data (fd=<optimized out>, mask=<optimized out>, data=0x564730844000) at src/wayland-server.c:406
#7 0x00007f9c6ba0ac12 in wl_event_loop_dispatch (loop=0x56472db66130, timeout=timeout@entry=0)
at src/event-loop.c:423
#8 0x00007f9c758c7947 in wayland_event_source_dispatch (base=<optimized out>, callback=<optimized out>, data=<optimized out>) at wayland/meta-wayland.c:84
#9 0x00007f9c7737ab77 in g_main_dispatch (context=0x56472db8fb10) at gmain.c:3142
#10 0x00007f9c7737ab77 in g_main_context_dispatch (context=context@entry=0x56472db8fb10) at gmain.c:3795
#11 0x00007f9c7737af20 in g_main_context_iterate (context=0x56472db8fb10, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3868
#12 0x00007f9c7737b232 in g_main_loop_run (loop=0x56472def6b50) at gmain.c:4064
#13 0x00007f9c7589093c in meta_run () at core/main.c:648
#14 0x000056472d8a142c in main (argc=<optimized out>, argv=<optimized out>) at ../src/main.c:530